--- a/oliveyoung/src/main/resources/application.yml
+++ b/oliveyoung/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     show-sql: true
 
 jwt:
-  secret: ${JWT_SECRET_KEY}
+  jwt-secret: ${JWT_SECRET_KEY}
   expiration: 3600000
   header: Authorization
   prefix: Bearer
