--- a/oliveyoung/src/main/resources/application.yml
+++ b/oliveyoung/src/main/resources/application.yml
@@ -8,11 +8,12 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     show-sql: true
 
 jwt:
   secret: ${JWT_SECRET_KEY}
-  expiration: 3600000
+  expiration: 3600000 # 1시간 (밀리초)
+  refresh-expiration: 1209600000 # 14일 (밀리초)
   header: Authorization
   prefix: Bearer
